UI List product

--- a/MyProject/Views/Shared/_Admin.cshtml
+++ b/MyProject/Views/Shared/_Admin.cshtml
@@ -26,12 +26,12 @@
         <a asp-action="Logout" asp-controller="Authen">Log out</a>
     </div>
     <div class="tab-item active">
-        <i class="tab-icon fa-solid fa-user"></i>
-        <a asp-action="Index" asp-controller="Product">Customer</a>
+        <i class="tab-icon fa-solid fa-utensils"></i>
+        <a asp-action="ListProduct" asp-controller="Product">Product</a>
     </div>
     <div class="tab-item active">
-        <i class="tab-icon fa-solid fa-user"></i>
-        <a asp-action="Index" asp-controller="Product">Customer</a>
+        <i class="tab-icon  fa-solid fa-book-open"></i>
+        <a asp-action="ListProduct" asp-controller="Product">Category</a>
     </div>
 
 </div>
