--- a/MyProject/Views/Product/Listproduct.cshtml
+++ b/MyProject/Views/Product/Listproduct.cshtml
@@ -1,89 +1,56 @@
+@model List<MyProject.Models.Dtos.ProductDto>;
+@{
+    Layout = "_Admin";
+}
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="/js/menu_main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 <body>
 
 
+<div>
+    <button type="button" class="btn btn-warning mt-1">Add</button>
+</div>
 @if (Model != null)
 {
-    <div class="product-item empty border border-opacity-25 p-0 m-1 rounded-4 overflow-hidden d-flex justify-content-center align-items-center">
-        <a class="add-product"
-           data-bs-toggle="modal"
-           data-bs-target="#myModal">
-            <div class="column">
-                <i class="fas fa-plus" style="color: rgb(236, 121, 5)"></i>
-                <span class="centered-text">Thêm</span>
-            </div>
-        </a>
-    </div>
-
-    @Html.Partial("NewProduct")
-    @foreach (var product in Model)
-    {
-        <div class="product-item border border-opacity-25 p-0 m-1 rounded-4 overflow-hidden">
-            <div class="product-image-container">
-                <img src="@product.Image"
-                     alt="Anh mon an"
-                     id="image"
-                     class="w-100"/>
-            </div>
-
-            <div class="infor-product-items p-3">
-                <h5 class="product-name mb-3 text-truncate" title="@product.ProductName">@product.ProductName</h5>
-                <div class="d-flex flex-row justify-content-between mb-2">
-                    <div class="text-secondary">Giá:</div>
-                    <div class="text-secondary">
-                        @{
-                            decimal price = product.Price;
-                            string formattedTotalPrice = price.ToString("N0");
-                            string formatPrice = formattedTotalPrice.Replace('.', ',');
-                            @formatPrice
-                        }
-                        VND
-                    </div>
-                </div>
-                <div class="d-grid gap-2">
-                    <div class="container-button">
-                        <div class="edit-product">
-                            <a asp-controller="Product" asp-action="EditProduct" asp-route-productId="@product.Id">Sửa</a>
-                        </div>
-                        <div class="delete-product">
-                            <button id="deleteProduct-@product.Id"
-                                    data-product-id="@product.Id"
-                                    data-bs-toggle="modal"
-                                    data-bs-target="#confirDeleteProduct-@product.Id"
-                                    class="btn btn-danger">
-                                Xoá
-                            </button>
-                        </div>
-
-                        <div id="confirDeleteProduct-@product.Id" class="modal fade">
-                            <!-- Thêm Id riêng cho mỗi modal -->
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title">Xác nhận xoá sản phẩm</h5>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-
-                                    </div>
-                                    <div class="modal-body">
-                                        Bạn có chắc chắn muốn xoá sản phẩm này không?
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" id="cancelButton" data-bs-dismiss="modal">Hủy</button>
-                                        <button id="confirmButton-@product.Id" type="button" class="btn btn-primary" data-product-id="@product.Id">Xác nhận</button>
-                                    </div>
+    <div class="container d-flex justify-content-center">
+        <div class="row">
+            <div class="col-12">
+                @foreach (var prodcut in Model)
+                {
+                    <div class="card border shadow-none mb-4">
+                        <div class="card-body d-flex flex-row justify-content-between">
+                            <div class="InfoProduct d-flex align-items-start">
+                                <div class="me-4">
+                                    <img
+                                        class="img-thumbnail rounded"
+                                        src="@prodcut.Image"
+                                        alt=""
+                                        style="width: 7rem; height: 7rem"/>
                                 </div>
+                                <div class="Info d-flex flex-column justify-content-around">
+                                    <h5>@prodcut.ProductName</h5>
+                                    <p>@prodcut.Price</p>
+                                    <p>@prodcut.Categories</p>
+                                </div>
+                            </div>
+                            <div class="Activity d-flex flex-column justify-content-between">
+                                <button type="button" class="btn btn-outline-secondary" 
+                                        asp-action="DeleteProduct" asp-router-id ="@prodcut.Id" >
+                                    Delete
+                                </button>
+                                <button type="button" class="btn btn-outline-warning">
+                                    Edit
+                                </button>
                             </div>
                         </div>
                     </div>
-                </div>
-
+                }
+                
             </div>
         </div>
-    }
+    </div>
 }
 else
 {
@@ -92,4 +59,3 @@ else
 
 
 </body>
-
