--- a/MyProject/Views/Product/Listproduct.cshtml
+++ b/MyProject/Views/Product/Listproduct.cshtml
@@ -15,7 +15,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <link rel="stylesheet" href="/css/Product.css"/>
-
+<link rel="stylesheet" href="/css/EditProduct.css"/>
 <body>
 
 
@@ -64,7 +64,7 @@
 </div>
 @if (Model != null)
 {
-    <div class="container d-flex justify-content-center">
+    <div class="container-fluid d-flex justify-content-center">
         <div class="row">
             <div class="col-12" id="List-item">
                 @foreach (var prodcut in Model)
@@ -91,53 +91,52 @@
                                     Delete
                                 </button>
                                 <button type="button" class="btn btn-outline-warning EditProduct"
-                                        data-bs-toggle="modal" data-bs-target="#EditProduct"
-                                        data-productID = "@prodcut.Id">
+                                        data-productID="@prodcut.Id">
                                     Edit
                                 </button>
                             </div>
                         </div>
                     </div>
                 }
+            </div>
 
-                
-                    <div class="modal fade" id="EditProduct" data-bs-backdrop="static"
-                         data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="staticBackdropLabel">Thông tin sản phẩm</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <input type="text"  class="form-control shadow-none " placeholder="Link ảnh" name="avatar"/>
-                                    <input type="text"  class="form-control shadow-none mt-3" placeholder="Tên sản phẩm" name="name"/>
-                                    <input type="number"  class="form-control shadow-none mt-3" placeholder="Giá sản phẩm" name="price"/>
-                                    <div class="category-grid">
-                                        @if (listCate != null)
-                                        {
-                                            @foreach (var category in listCate)
-                                            {
-                                                <div class="form-check" style="margin: 10px">
-                                                    <input class="form-check-input" type="radio" id="@category.Id" name="categoryName" value="@category.Id">
-                                                    <label class="form-check-label" for="@category.Id">@category.CategoryName</label>
-                                                </div>
-                                            }
-                                        }
-                                        else
-                                        {
-                                            <p>Chưa có danh mục </p>
-                                        }
-                                    </div>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Lưu</button>
-                                </div>
+            @* My Modal *@
+            <div id="EditProduct" class="modalLogOut">
+                <div class="modal-contentLogOut">
+                    <form asp-action="EditProduct">
+                        <div class="modal-headerLogOut">
+                            <h3>Thông tin sản phẩm</h3>
+                            <span class="btn-close" id="Close" style="color: red"></span>
+                        </div>
+                        <div class="modal-bodyLogOut">
+                            <input id="editId" name="id" style="display: none"/>
+                            <input type="text" class="form-control shadow-none " id="editAvatar" placeholder="Link ảnh" name="avatar"/>
+                            <input type="text" class="form-control shadow-none mt-3 " id="editName" placeholder="Tên sản phẩm" name="name"/>
+                            <input type="number" class="form-control shadow-none mt-3 " id="editPrice" placeholder="Giá sản phẩm" name="price"/>
+                            <div class="category-grid">
+                                @if (listCate != null)
+                                {
+                                    @foreach (var category in listCate)
+                                    {
+                                        <div class="form-check" style="margin: 10px">
+                                            <input class="form-check-input" type="radio" id="@category.Id" name="categoryName" value="@category.Id">
+                                            <label class="form-check-label" for="@category.Id">@category.CategoryName</label>
+                                        </div>
+                                    }
+                                }
+                                else
+                                {
+                                    <p>Chưa có danh mục </p>
+                                }
+
                             </div>
                         </div>
-                    </div>
-                
+                        <div class="modal-footerLogOut">
+                            <button type="submit" id="confirmLogOut">Lưu</button>
+                            <button type="button" id="cancelLogOut">Hủy</button>
+                        </div>
+                    </form>
+                </div>
 
             </div>
             <div class="container-fluid d-flex flex-row justify-content-between m-0">
